# irishtaxhub-mcp

./: .env.example  .flake8  .gitignore  CLAUDE.md  README.md  lambda_handler.py  pyproject.toml  requirements.txt  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-pr-review.yml  dependabot-regen-requirements.yml  deploy-prod.yml  deploy-stage.yml  tf-plan.yml
docs/: sample-questions.md
docs/superpowers/plans/: 2026-03-31-aws-deployment.md
docs/superpowers/specs/: 2026-03-31-aws-deployment-design.md
scripts/: aws_config.env  package_lambda.sh  setup_aws_prerequisites.sh  setup_github_oidc.sh
src/irishtaxhub_mcp/: __init__.py  asgi.py  client.py  middleware.py  models.py  openapi.py  server.py  settings.py
terraform/envs/prod/: backend.hcl  main.tf  terraform.tfvars  variables.tf
terraform/envs/stage/: backend.hcl  main.tf  terraform.tfvars  variables.tf
terraform/modules/api_lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/custom_domain/: main.tf  outputs.tf  variables.tf
terraform/modules/streaming_domain/: main.tf  outputs.tf  variables.tf
terraform/modules/streaming_waf/: main.tf  outputs.tf  variables.tf
tests/: test_asgi.py  test_middleware.py  test_server.py  test_tax_treaties_tools.py
