[tool.poetry]
name = "irishtaxhub-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for IrishTaxHub APIs"
readme = "README.md"
authors = ["IrishTaxHub <dev@irishtaxhub.example>"]
packages = [{ include = "irishtaxhub_mcp", from = "src" }]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
# FastMCP framework and HTTP client
fastmcp = ">=2.0"
httpx = ">=0.27"
pydantic = ">=2.6"
python-dotenv = ">=1.0.1"
PyYAML = ">=6.0"
Jinja2 = ">=3.1"
jsonschema = ">=4.22"
mangum = ">=0.19"
algoliasearch = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^26.0.0"
isort = "^8.0.1"
flake8 = "^7.1.1"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poetry.scripts]
irishtaxhub-mcp = "irishtaxhub_mcp.server:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
